[package]
name = "routing_chord"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
rsa = { version = "0.9.7", features = ["serde", "sha2"] }
rand = "0.8.5"
num-bigint = { version = "0.4.6", features = ["serde"] }
sha2 = "0.10.8"
chacha20poly1305 = "0.10.1"
lru = "0.12.5"

[dev-dependencies]
tracing-test = { version = "0.2.5" , features = ["no-env-filter"]}
